third_party/rust/cxx/v1/crate/tests/ui/array_len_suffix.stderr
error[E0308]: mismatched types
 --> tests/ui/array_len_suffix.rs:4:32
  |
4 |         fn array() -> [String; 12u16];
  |                                ^^^^^ expected `usize`, found `u16`
  |
help: change the type of the numeric literal from `u16` to `usize`
  |
4 |         fn array() -> [String; 12usize];
  |                                  ~~~~~
